First attempt at moving to Spring Boot 2